syntax = "proto3";

package com.toyent.srv.stock;

service Stock {
	rpc Query(QueryRequest) returns (QueryResponse) {}
	rpc Price(PriceRequest) returns (PriceResponse) {}
	rpc Quot(QuotRequest) returns (QuotResponse) {}
	rpc OpenTrade(OpenTradeRequest) returns (OpenTradeResponse) {}
}

message stock {
	string stock_id = 1;
	string stock_name = 2;
	double open_price = 3;
	double close_price = 4;
	string trade_date = 5;
}

message price {
	int64 time = 1;
	double price = 2;
}

message quot {
	string stock_id = 1;
	repeated price price = 3;
}

message QueryRequest {
	string sid = 1;
	string stock_id = 2;
}

message QueryResponse {
	string sid = 1;
	string status = 2;
	string message = 3;
	repeated stock stock = 4;
}

message PriceRequest {
	string sid = 1;
	string stock_id = 2;
	double price = 3;
}

message PriceResponse {
	string sid = 1;
	string status = 2;
	string message = 3;
}
message QuotRequest {
	string sid = 1;
	string stock_id = 2;
	int64 beginTime = 3;
	int64 endTime = 4;
}

message QuotResponse {
	string sid = 1;
	string status = 2;
	string message = 3;
	quot quot = 4;
}
message OpenTradeRequest {
	string sid = 1;
}

message OpenTradeResponse {
	string sid = 1;
	string status = 2;
	string message = 3;
}
